syntax = "proto3";

package metricsgrpc;

option go_package = "/metrics";

service metrics {
  rpc Push(PushRequest) returns (PushResponce) {}
  rpc Get(GetRequest) returns (GetResponce) {}
  rpc PushBatch(PushBatchRequest) returns (PushBatchResponce) {}
  rpc GetBatch(GetBatchRequest) returns (GetBatchResponce) {}
}

message metric {
  string name = 1;
  bytes value = 2;
  int32 localtime = 3;
  string source_from_systems = 4;
  string relation_ci = 5;
}

message PushRequest { metric item = 1; }

message PushResponce { string code = 1; }

message GetRequest { string id = 1; }

message GetResponce {
  string code = 1;
  metric item = 2;
}

message PushBatchRequest { repeated metric item = 1; }

message PushBatchResponce { string code = 1; }

message GetBatchRequest { repeated metric item = 1; }

message GetBatchResponce {
  string code = 1;
  repeated metric item = 2;
}
